<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_title_text_input"
                style="@style/Widget.MaRéu.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meeting_title_input"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_date_text_input"
                style="@style/Widget.MaRéu.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingBottom="24dp"
                app:layout_constraintEnd_toStartOf="@+id/meeting_time_text_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_title_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_date_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/date_input"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_time_text_input"
                style="@style/Widget.MaRéu.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingBottom="24dp"
                app:layout_constraintEnd_toStartOf="@id/meeting_duration_text_input"
                app:layout_constraintStart_toEndOf="@+id/meeting_date_text_input"
                app:layout_constraintTop_toBottomOf="@id/meeting_title_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_time_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/hour_input"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_duration_text_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:suffixText="@string/minutes_short"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/meeting_time_text_input"
                app:layout_constraintTop_toBottomOf="@id/meeting_title_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_duration_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meeting_duration"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_room_text_input"
                style="@style/Widget.MaRéu.TextInputLayout.ExposedDropDownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_time_text_input">

                <AutoCompleteTextView
                    android:id="@+id/meeting_room_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_meeting_room_24"
                    android:drawablePadding="16dp"
                    android:hint="@string/meeting_room_input"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_participants_text_input"
                style="@style/Widget.MaRéu.TextInputLayout.ExposedDropDownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_room_text_input">

                <MultiAutoCompleteTextView
                    android:id="@+id/meeting_participants_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_people_24"
                    android:drawablePadding="16dp"
                    android:hint="@string/participants_input"
                    android:inputType="textEmailAddress|textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>