<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_meeting_room_text_input"
        style="@style/Widget.MaRéu.TextInputLayout.ExposedDropDownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <AutoCompleteTextView
            android:id="@+id/dialog_meeting_room_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_room_input"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>